# ferrite-analytics

./: .env  .gitignore  .gitmodules  README.md
.github/workflows/: release.yml
.packaging/: ferrite-analytics-CI.public.asc
Docker/: Dockerfile
dashboard/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
dashboard/public/: theme.js
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/: login-button.tsx  theme-toggle.tsx
dashboard/src/helpers/: api.ts
dashboard/src/hooks/: auth.ts  localStorage.ts  themeColor.ts
migration/: Cargo.toml
migration/src/: lib.rs
service/: Cargo.toml
service/migration/src/: m20230708_165814_initialize.rs
service/src/: main.rs
service/src/cli/: mod.rs  run_command.rs
service/src/cli/account/: create.rs  delete.rs  list.rs  mod.rs
service/src/cli/benchmark/: mod.rs
service/src/cli/query/: mod.rs
service/src/entity/: account.rs  dashboard.rs  event.rs  meta.rs  mod.rs  prelude.rs  property.rs  property_boolean.rs  property_integer.rs  property_string.rs  token_invalidation.rs  tracker.rs  tracking_pixel.rs
service/src/helpers/: event.rs  meta.rs  mod.rs  query.rs  session_id.rs  token.rs  user_agent.rs
service/src/middleware/: mod.rs  require_auth.rs  session_id.rs
service/src/service/: d.rs  mod.rs
service/src/service/api/: mod.rs
service/src/service/api/auth/: login.rs  me.rs
service/src/service/api/query/: filter.rs
service/src/service/r/: mod.rs  script_js.rs
service/src/service/t/: event.rs  mod.rs  t_png.rs
service/src/state/: mod.rs
src/: main.rs
src/entity/: mod.rs
src/helpers/: user_agent.rs
src/service/t/: mod.rs  t_png.rs
src/state/: mod.rs
src/tracking/: mod.rs  tracking_pixel.rs
src/tracking/helpers/: event.rs  user_agent.rs
tracker/: LICENSE.txt  package.json  pnpm-lock.yaml  tsconfig.json
tracker/src/: index.ts
