[package]
name = "basalytics"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
# Web server
axum = { version = "0.6", features = ["http2"] }
http = "*"
headers = "*"
# async
tokio = { version = "1.29", features = ["full"] }
futures = "0.3"
# Database
sea-orm = { version = "^0", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
] }
sea-query = "0"
# Include the DB migrations
migration = { path = "migration" }
# Time
chrono = "0.4"
# Unique IDs that are sortable
ulid = "1.0"
# Error handling
anyhow = "1.0"
# Parsing user agents
user-agent-parser = "0.3"
# Store user agents parser (and anything else)
lazy_static = "1.4"
async_once = "0.2.6"
# async traits
async-trait = "0.1"
# json parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.102"
# Auth
jsonwebtoken = "8.3"
password-auth = "0.3.0"
clap = { version = "4.3.12", features = ["derive"] }
# Hash for session IDs
sha2 = "0.10"
base64 = "0.21"
getrandom = "0.2"
# CLI Graphs
textplots = "0.8"
