[package]
name = "ferrite"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/SeriousBug/ferrite-analytics"

[workspace]
members = [".", "migration"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []

[dependencies]
# Web server
axum = { version = "0.6", features = ["http2"] }
http = "*"
headers = "*"
tower-http = { version = "0.4", features = ["cors"] }
# async
tokio = { version = "1.29", features = ["full"] }
futures = "0.3"
# Database
sea-orm = { version = "^0", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
] }
sea-query = "0"
# Include the DB migrations
migration = { path = "migration" }
# Time
chrono = "0.4"
# Unique IDs that are sortable
ulid = "1.0"
# Error handling
anyhow = "1.0"
# Parsing user agents
user-agent-parser = "0.3"
# Store user agents parser (and anything else)
lazy_static = "1.4"
async_once = "0.2.6"
# async traits
async-trait = "0.1"
# json parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.102"
# Auth
jsonwebtoken = "8.3"
password-auth = "0.3.0"
clap = { version = "4.3.12", features = ["derive"] }
# Hash for session IDs
sha2 = "0.10"
base64 = "0.21"
getrandom = "0.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
